--- a/2.html
+++ b/2.html
@@ -1,49 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>WEB1 - 태극기</title>
+  <title>WEB1 - 애국가</title>
   <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="index.html">대한민국</a></h1>
+<h1>우리 나라</h1>
 <ol>
-  <li><a href="1.html">애국가</a></li>
-  <li><a href="2.html">태극기</a></li>
-  <li><a href="3.html">한반도</a></li>
+  <li><a href="1.html">대한민국</a></li>
+  <li><a href="2.html">애국가</a></li>
+  <li><a href="3.html">태극기</a></li>
+  <li><a href="4.html">한반도</a></li>
 </ol>
 <h2>
-  <a href="https://ko.dict.naver.com/#/entry/koko/ea6594a46b5f4f1ea8ba3ce74fb6e641"
+  <a href="https://ko.dict.naver.com/#/entry/koko/5f809768fd204d8cad8e52ba1ece3052"
   target="_blank"
-  title="태극기 정의">
-  태극기</a></h2>
-  <h3>(1) 게양방법</h3>
-<p>국기는 비 또는 눈이 내리지 않는 날의 낮에 게양함을 원칙으로 하며,
-  하절기(3∼10월)에는 오전 7시에 달고 오후 6시에 내리며, 동절기(11∼2월)에는 오전 7시에 달고 오후 5시에 내린다.<br>
-  특별한 행사가 있을 때에는 그 행사 때에만 달기도 한다. 경축할 때는 깃봉과 깃 사이를 떼지 않고 단다.
-  일반 가정의 대문에는 집 밖에서 보아 왼쪽에 곧게 세우며, 건물의 옥상에는 그 중앙에 국기를 게양한다.<br>
-  국장·국민장 등 조의를 표할 때는 깃봉에서 깃면의 너비만큼 떼어서 단다.
-  외국기와 같이 달 때는 최우선의 위치에 단다. 태극기와 외국기 하나를 같이 세울 때는 태극기를 왼쪽에 세우고,
-  서로 엇갈리게 할 때는 태극기의 깃면이 단상을 향하여 왼쪽에 오게 하고 깃대는 밖으로 가게 한다.<br>
-  세 나라 이상의 외국기와 함께 세울 때는 홀수인 경우에는 태극기를 중앙에 달고
-  외국기는 국명의 알파벳순에 따라 향해서 왼편이 둘째, 오른편이 셋째순으로 하며,
-  짝수인 경우에는 태극기를 왼편 첫째로 하고, 외국기는 국명의 알파벳순에 따라 오른쪽으로 차례차례 단다.</p>
-  <h3>(2) 제작방법</h3>
-  <p>깃면은 흰빛으로 하고 길이와 너비는 3과 2의 비례로 한다. 깃면은 태극과 4괘로 구성된다.
-    태극은 깃면의 두 대각선이 서로 교차하는 점을 중심으로 깃면너비의 2분의 1을 지름으로 하는 원을 그린 다음,
-    두 대각선 중 왼쪽 윗모서리에서 오른쪽 아래 모서리로 그어진 대각선상의 원의 지름을 2등분하여
-    왼쪽 부분에 원의 지름의 2분의 1(깃면너비의 4분의 1)을 지름으로 하는 반원을 대각선의 아랫부분에 그린다.<br>
-    그 오른쪽 부분에 원의 지름의 2분의 1(깃면너비의 4분의 1)을 지름으로 하는 반원을 대각선의 윗부분에 그리고,
-    반원으로 연결된 원의 윗부분은 빨강색(진홍색)으로, 그 아랫부분은 파랑색(아청색)으로 한다.
-    그 다음 4괘는 깃면의 왼쪽 윗부분에 건을, 오른쪽 아랫부분에 곤을, 오른쪽 윗부분에 감을,
-    왼쪽 아랫부분에 이를 각각 배열한다.<br>
-    괘의 길이는 태극지름의 2분의 1(깃면너비의 4분의 1)로 하고,
-    괘의 너비는 태극지름의 3분의 1(깃면너비의 6분의 1)로 하며,
-    괘와 태극 사이는 태극지름의 4분의 1(깃면너비의 8분의 1)을 띄운다.
-    괘의 길이 중심을 깃면의 두 대각선상에 두되 그 길이는 두 대각선과 각각 직각을 이루도록 한다.<br>
-    괘의 구성은 효(爻)로 하되, 그 효의 너비는 괘너비의 4분의 1(깃면의 너비 24분의 1)로 하고,
-    효와 효 사이 및 끊어진 효의 사이는 효너비의 2분의 1(깃면너비의 48분의 1)로 한다. 괘는 검정색이다.<br>
-    깃봉은 아랫부분에 꽃받침이 5편(片) 있는 둥근 모양에 가까운 무궁화봉오리 모양으로 하며, 색은 황금색으로 한다.
-    깃대는 대나무 또는 쇠 등의 견고한 재질로 만들고, 색은 대나무색 또는 이와 유사한 색으로 한다.</p>
-<img src="태극기.jpg" width="100%">
+  title="애국가 정의">
+  애국가</a></h2>
+<h3>(1) 내용</h3>
+<p>가사는 윤치호(尹致昊)·안창호(安昌浩)·민영환(閔泳煥) 등이 만들었다는 설이 있으나 어느 것도 공인되지 않았고,
+  곡은 1936년에 만들어져 1948년 8월 15일 정부수립과 함께 대한민국 국가로 불리게 되었다.<br>
+  정부에 의하여 정식으로 국가로 제정되거나 채택된 것이 아니라,
+  관습적으로 국가로 불리다가 명실공히 대한민국을 상징하는 노래가 되었다.<br>
+  작곡자가 「애국가」의 가사를 처음 접한 것은 1919년 3·1운동 때였다.
+  그 뒤 「애국가」가 스코틀랜드 민요「Auld lang syne」, 즉 「이별의 노래」의 곡조에 붙여 불리는 것을
+  안타깝게 생각하여 한국사람인 자기가 직접 작곡해야겠다고 결심하고 1936년에 곡을 완성하였다.<br>
+  그리고 같은 해 베를린올림픽에 참가한 한국선수단을 찾아가 그들과 함께 불렀는데,
+  우리 나라의 「애국가」가 불린 것이 이때가 처음이었다.<br>
+  곡은 가장조(또는 사장조), 4분의 4박자로 되어 있으며, 속도는 느리고 장중한 분위기의 악상을 가지고 있다.
+  모두 16마디로 되어 있으며, 4절의 가사로 된 유절형식과 a-b-c-b의 구조로 된 두도막형식으로 되어 있다.
+  간결하면서도 장중한 것이 특징이다.<br>「애국가」는 사용 용도에 따라 세 가지로 구분된다.
+  피아노 반주로 된 것이 원곡이고, 아무런 반주 없이 부르는 것과 악기만으로 연주되는 것이 있다.
+  반주가 있는 경우에는 4마디의 전주가 있고, 악기만으로 연주되는 경우에는 전주가 없다.<br>
+  작곡자는 이 「애국가」를 주제로 하여 1936년에 자신의 대표작인 교향곡 「한국환상곡」을 작곡하였다.</p>
+<h3>(2) 1절 가사</h3>
+<p>동해물과 백두산이 마르고 닳도록 <strong><u>하나님</u>이 보우하사</strong>우리나라 만세<br>
+  무궁화 삼천리 화려 강산 대한 사람 대한으로 길이 보전하세.</p>
+<img src="애국가.jpg" width="100%">
 </body>
 </html>
