--- a/2.html
+++ b/2.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>WEB1 - 애국가</title>
+  <title>WEB1 - 우리 나라 - 애국가</title>
   <meta charset="utf-8">
 </head>
 <body>
-<h1>우리 나라</h1>
+<h1><a href = "main.html">우리 나라</h1>
 <ol>
   <li><a href="1.html">대한민국</a></li>
   <li><a href="2.html">애국가</a></li>
