--- a/1.html
+++ b/1.html
@@ -26,6 +26,6 @@
   6개 광역시(부산광역시, 인천광역시, 대전광역시, 대구광역시, 광주광역시, 울산광역시),
   1개의 특별자치도(제주특별자치도), 8개 도로 이루어져 있다.<br>
   분단국가로, 6·25전쟁 후인 1953년 휴전협정 체결 후 북한과 휴전 상태가 계속되고 있다.</p>
-<img src="대한민국.jpg" width="100%">
+<img src="대한민국.jpg" width="500">
 </body>
 </html>
