--- a/2.html
+++ b/2.html
@@ -36,6 +36,6 @@
 <h3>(2) 1절 가사</h3>
 <p>동해물과 백두산이 마르고 닳도록 <strong><u>하나님</u>이 보우하사</strong>우리나라 만세<br>
   무궁화 삼천리 화려 강산 대한 사람 대한으로 길이 보전하세.</p>
-<img src="애국가.jpg" width="100%">
+<img src="애국가.jpg" width="500">
 </body>
 </html>
