--- a/3.html
+++ b/3.html
@@ -45,6 +45,6 @@
     효와 효 사이 및 끊어진 효의 사이는 효너비의 2분의 1(깃면너비의 48분의 1)로 한다. 괘는 검정색이다.<br>
     깃봉은 아랫부분에 꽃받침이 5편(片) 있는 둥근 모양에 가까운 무궁화봉오리 모양으로 하며, 색은 황금색으로 한다.
     깃대는 대나무 또는 쇠 등의 견고한 재질로 만들고, 색은 대나무색 또는 이와 유사한 색으로 한다.</p>
-<img src="태극기.jpg" width="100%">
+<img src="태극기.jpg" width="500">
 </body>
 </html>
