--- a/4.html
+++ b/4.html
@@ -26,6 +26,6 @@
   대륙과 해양을 잇는 위치에서 문화를 전파할 수 있는 통로가 될 수 있어요.
   원료를 수입하여 완제품을 만들어 파는 가공 무역이 발달하기에 적합하고, 대륙과 해양으로의 진출하기에 유리하지요.
   앞으로 한반도는 동북아시아의 물류 거점으로 발전할 잠재력이 크답니다.</p>
-<img src="한반도.jpg" width="100%">
+<img src="한반도.jpg" width="500">
 </body>
 </html>
