--- a/4.html
+++ b/4.html
@@ -5,18 +5,19 @@
   <meta charset="utf-8">
 </head>
 <body>
+<style>a{text-decoration:none; color:black}</style>
 <h1><a href = "main.html">우리 나라</h1>
 <ol>
   <li><a href="1.html">대한민국</a></li>
   <li><a href="2.html">애국가</a></li>
   <li><a href="3.html">태극기</a></li>
-  <li><a href="4.html">한반도</a></li>
+  <li><a href="4.html"><a style="color:red">한반도</a></li>
 </ol>
 <h2>
   <a href="https://ko.dict.naver.com/#/entry/koko/5a695790ec6740f7b9ceb9e8ad1ba8c8"
   target="_blank"
   title="한반도 정의">
-  한반도</a></h2>
+  <a style="text-decoration:underline">한반도</a></h2>
 <h3>(1) 지형</h3>
 <p>한반도는 우리나라 국토를 지형적으로 일컫는 말이에요.
   우리나라의 영토는 한반도와 그 부속 도서를 포함해요.
