--- a/1.html
+++ b/1.html
@@ -5,9 +5,10 @@
   <meta charset="utf-8">
 </head>
 <body>
+<style>a{text-decoration:none; color:black}</style>
 <h1><a href = "main.html">우리 나라</h1>
 <ol>
-  <li><a href="1.html">대한민국</a></li>
+  <li><a href="1.html"><a style="color:red">대한민국</a></li>
   <li><a href="2.html">애국가</a></li>
   <li><a href="3.html">태극기</a></li>
   <li><a href="4.html">한반도</a></li>
@@ -16,7 +17,7 @@
   <a href="https://ko.dict.naver.com/#/entry/koko/9039487bd48145ef895dd71b0efb1add"
   target="_blank"
   title="대한민국 정의">
-  대한민국</a></h2>
+  <a style="text-decoration:underline">대한민국</a></h2>
 <p>한국(韓國) 또는 남한(South Korea)이라고도 부르고, 북한에서는 남조선(南朝鮮)이라고 부른다.<br>
   남북으로 길게 뻗은 반도와 3,200여 개의 섬으로 이루어져 있다.<br>
   북쪽은 압록강과 두만강을 건너 중국의 만주와 러시아의 연해주에 접하고,
