--- a/2.html
+++ b/2.html
@@ -5,10 +5,11 @@
   <meta charset="utf-8">
 </head>
 <body>
+<style>a{text-decoration:none; color:black}</style>
 <h1><a href = "main.html">우리 나라</h1>
 <ol>
   <li><a href="1.html">대한민국</a></li>
-  <li><a href="2.html">애국가</a></li>
+  <li><a href="2.html"><a style="color:red">애국가</a></li>
   <li><a href="3.html">태극기</a></li>
   <li><a href="4.html">한반도</a></li>
 </ol>
@@ -16,7 +17,7 @@
   <a href="https://ko.dict.naver.com/#/entry/koko/5f809768fd204d8cad8e52ba1ece3052"
   target="_blank"
   title="애국가 정의">
-  애국가</a></h2>
+  <a style="text-decoration:underline">애국가</a></h2>
 <p>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/n6WaTObHRJM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <p/>
