--- a/3.html
+++ b/3.html
@@ -5,18 +5,19 @@
   <meta charset="utf-8">
 </head>
 <body>
+<style>a{text-decoration:none; color:black}</style>
 <h1><a href = "main.html">우리 나라</h1>
 <ol>
   <li><a href="1.html">대한민국</a></li>
   <li><a href="2.html">애국가</a></li>
-  <li><a href="3.html">태극기</a></li>
+  <li><a href="3.html"><a style="color:red">태극기</a></li>
   <li><a href="4.html">한반도</a></li>
 </ol>
 <h2>
   <a href="https://ko.dict.naver.com/#/entry/koko/ea6594a46b5f4f1ea8ba3ce74fb6e641"
   target="_blank"
   title="태극기 정의">
-  태극기</a></h2>
+  <a style="text-decoration:underline">태극기</a></h2>
   <h3>(1) 게양방법</h3>
 <p>국기는 비 또는 눈이 내리지 않는 날의 낮에 게양함을 원칙으로 하며,
   하절기(3∼10월)에는 오전 7시에 달고 오후 6시에 내리며, 동절기(11∼2월)에는 오전 7시에 달고 오후 5시에 내린다.<br>
