--- a/main.html
+++ b/main.html
@@ -5,12 +5,13 @@
   <meta charset="utf-8">
 </head>
 <body>
-<h1><a href = "main.html">우리 나라</h1>
+<style>a{text-decoration:none; color:black}</style>
+<h1><a href = "main.html"><a style="color:red">우리 나라</font></h1>
 <ol>
-  <li><a href="1.html">대한민국</a></li>
-  <li><a href="2.html">애국가</a></li>
-  <li><a href="3.html">태극기</a></li>
-  <li><a href="4.html">한반도</a></li>
+  <li><a href="1.html">대한민국</font></a></li>
+  <li><a href="2.html">애국가</font></a></li>
+  <li><a href="3.html">태극기</font></a></li>
+  <li><a href="4.html">한반도</font></a></li>
 </ol>
 <p>이곳은 한국 소개하는 자그마한 사이트입니다.</p>
 <p>위의 목차로 함께 알아보아요!</p>
