--- a/1.html
+++ b/1.html
@@ -5,7 +5,10 @@
   <meta charset="utf-8">
 </head>
 <body>
-<style>a{text-decoration:none; color:black}</style>
+<style>
+a{text-decoration:none; color:black}
+h1{font-size:45px; text-align:center;}
+</style>
 <h1><a href = "main.html">우리 나라</h1>
 <ol>
   <li><a href="1.html"><a style="color:red">대한민국</a></li>
