--- a/1.html
+++ b/1.html
@@ -3,24 +3,36 @@
 <head>
   <title>WEB1 - 우리 나라 - 대한민국</title>
   <meta charset="utf-8">
+
+  <style>
+  body{margin:0;}
+  a{text-decoration:none; color:black}
+  h1{font-size:45px; text-align:center; border-bottom:1px solid gray; margin:0; padding:20px;}
+  ol{border-right:1px solid gray; width:100px; margin:0; padding:20px;}
+  #grid{display: grid; grid-template-columns: 150px 1fr;}
+  #grid ol{padding-left: 45px;}
+  #article{padding-left: 40px;}
+  </style>
+
 </head>
 <body>
-<style>
-a{text-decoration:none; color:black}
-h1{font-size:45px; text-align:center;}
-</style>
-<h1><a href = "main.html">우리 나라</h1>
+<h1><a href = "main.html">우리 나라</a></h1>
+
+<div id="grid">
 <ol>
   <li><a href="1.html"><a style="color:red">대한민국</a></li>
   <li><a href="2.html">애국가</a></li>
   <li><a href="3.html">태극기</a></li>
   <li><a href="4.html">한반도</a></li>
 </ol>
+<div id="article">
+
 <h2>
   <a href="https://ko.dict.naver.com/#/entry/koko/9039487bd48145ef895dd71b0efb1add"
   target="_blank"
-  title="대한민국 정의">
-  <a style="text-decoration:underline">대한민국</a></h2>
+  title="대한민국 정의"
+  style="text-decoration:underline">대한민국</a></h2>
+
 <p>한국(韓國) 또는 남한(South Korea)이라고도 부르고, 북한에서는 남조선(南朝鮮)이라고 부른다.<br>
   남북으로 길게 뻗은 반도와 3,200여 개의 섬으로 이루어져 있다.<br>
   북쪽은 압록강과 두만강을 건너 중국의 만주와 러시아의 연해주에 접하고,
@@ -31,5 +43,7 @@ h1{font-size:45px; text-align:center;}
   1개의 특별자치도(제주특별자치도), 8개 도로 이루어져 있다.<br>
   분단국가로, 6·25전쟁 후인 1953년 휴전협정 체결 후 북한과 휴전 상태가 계속되고 있다.</p>
 <img src="대한민국.jpg" width="500">
+</div>
+</div>
 </body>
 </html>
