--- a/2.html
+++ b/2.html
@@ -3,27 +3,40 @@
 <head>
   <title>WEB1 - 우리 나라 - 애국가</title>
   <meta charset="utf-8">
+
+  <style>
+  body{margin:0;}
+  a{text-decoration:none; color:black}
+  h1{font-size:45px; text-align:center; border-bottom:1px solid gray; margin:0; padding:20px;}
+  ol{border-right:1px solid gray; width:100px; margin:0; padding:20px;}
+  #grid{display: grid; grid-template-columns: 150px 1fr;}
+  #grid ol{padding-left: 45px;}
+  #article{padding-left: 40px;}
+  </style>
+
 </head>
 <body>
-<style>
-a{text-decoration:none; color:black}
-h1{font-size:45px; text-align:center;}
-</style>
-<h1><a href = "main.html">우리 나라</h1>
+<h1><a href = "main.html">우리 나라</a></h1>
+
+<div id="grid">
 <ol>
   <li><a href="1.html">대한민국</a></li>
   <li><a href="2.html"><a style="color:red">애국가</a></li>
   <li><a href="3.html">태극기</a></li>
   <li><a href="4.html">한반도</a></li>
 </ol>
+<div id="article">
+
 <h2>
   <a href="https://ko.dict.naver.com/#/entry/koko/5f809768fd204d8cad8e52ba1ece3052"
   target="_blank"
-  title="애국가 정의">
-  <a style="text-decoration:underline">애국가</a></h2>
+  title="애국가 정의"
+  style="text-decoration:underline">애국가</a></h2>
+
 <p>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/n6WaTObHRJM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <p/>
+
 <h3>(1) 내용</h3>
 <p>가사는 윤치호(尹致昊)·안창호(安昌浩)·민영환(閔泳煥) 등이 만들었다는 설이 있으나 어느 것도 공인되지 않았고,
   곡은 1936년에 만들어져 1948년 8월 15일 정부수립과 함께 대한민국 국가로 불리게 되었다.<br>
@@ -40,9 +53,12 @@ h1{font-size:45px; text-align:center;}
   피아노 반주로 된 것이 원곡이고, 아무런 반주 없이 부르는 것과 악기만으로 연주되는 것이 있다.
   반주가 있는 경우에는 4마디의 전주가 있고, 악기만으로 연주되는 경우에는 전주가 없다.<br>
   작곡자는 이 「애국가」를 주제로 하여 1936년에 자신의 대표작인 교향곡 「한국환상곡」을 작곡하였다.</p>
+
 <h3>(2) 1절 가사</h3>
 <p>동해물과 백두산이 마르고 닳도록 <strong><u>하나님</u>이 보우하사</strong>우리나라 만세<br>
   무궁화 삼천리 화려 강산 대한 사람 대한으로 길이 보전하세.</p>
 <img src="애국가.jpg" width="500">
+</div>
+</div>
 </body>
 </html>
