--- a/3.html
+++ b/3.html
@@ -3,24 +3,36 @@
 <head>
   <title>WEB1 - 우리 나라 - 태극기</title>
   <meta charset="utf-8">
+
+  <style>
+  body{margin:0;}
+  a{text-decoration:none; color:black}
+  h1{font-size:45px; text-align:center; border-bottom:1px solid gray; margin:0; padding:20px;}
+  ol{border-right:1px solid gray; width:100px; margin:0; padding:20px;}
+  #grid{display: grid; grid-template-columns: 150px 1fr;}
+  #grid ol{padding-left: 45px;}
+  #article{padding-left: 40px;}
+  </style>
+
 </head>
 <body>
-<style>
-a{text-decoration:none; color:black}
-h1{font-size:45px; text-align:center;}
-</style>
-<h1><a href = "main.html">우리 나라</h1>
+<h1><a href = "main.html">우리 나라</a></h1>
+
+<div id="grid">
 <ol>
   <li><a href="1.html">대한민국</a></li>
   <li><a href="2.html">애국가</a></li>
   <li><a href="3.html"><a style="color:red">태극기</a></li>
   <li><a href="4.html">한반도</a></li>
 </ol>
+<div id="article">
+
 <h2>
   <a href="https://ko.dict.naver.com/#/entry/koko/ea6594a46b5f4f1ea8ba3ce74fb6e641"
   target="_blank"
-  title="태극기 정의">
-  <a style="text-decoration:underline">태극기</a></h2>
+  title="태극기 정의"
+  style="text-decoration:underline">태극기</a></h2>
+
   <h3>(1) 게양방법</h3>
 <p>국기는 비 또는 눈이 내리지 않는 날의 낮에 게양함을 원칙으로 하며,
   하절기(3∼10월)에는 오전 7시에 달고 오후 6시에 내리며, 동절기(11∼2월)에는 오전 7시에 달고 오후 5시에 내린다.<br>
@@ -32,6 +44,7 @@ h1{font-size:45px; text-align:center;}
   세 나라 이상의 외국기와 함께 세울 때는 홀수인 경우에는 태극기를 중앙에 달고
   외국기는 국명의 알파벳순에 따라 향해서 왼편이 둘째, 오른편이 셋째순으로 하며,
   짝수인 경우에는 태극기를 왼편 첫째로 하고, 외국기는 국명의 알파벳순에 따라 오른쪽으로 차례차례 단다.</p>
+
   <h3>(2) 제작방법</h3>
   <p>깃면은 흰빛으로 하고 길이와 너비는 3과 2의 비례로 한다. 깃면은 태극과 4괘로 구성된다.
     태극은 깃면의 두 대각선이 서로 교차하는 점을 중심으로 깃면너비의 2분의 1을 지름으로 하는 원을 그린 다음,
@@ -50,5 +63,7 @@ h1{font-size:45px; text-align:center;}
     깃봉은 아랫부분에 꽃받침이 5편(片) 있는 둥근 모양에 가까운 무궁화봉오리 모양으로 하며, 색은 황금색으로 한다.
     깃대는 대나무 또는 쇠 등의 견고한 재질로 만들고, 색은 대나무색 또는 이와 유사한 색으로 한다.</p>
 <img src="태극기.jpg" width="500">
+</div>
+</div>
 </body>
 </html>
