--- a/4.html
+++ b/4.html
@@ -3,33 +3,48 @@
 <head>
   <title>WEB1 - 우리 나라 - 한반도</title>
   <meta charset="utf-8">
+
+  <style>
+  body{margin:0;}
+  a{text-decoration:none; color:black}
+  h1{font-size:45px; text-align:center; border-bottom:1px solid gray; margin:0; padding:20px;}
+  ol{border-right:1px solid gray; width:100px; margin:0; padding:20px;}
+  #grid{display: grid; grid-template-columns: 150px 1fr;}
+  #grid ol{padding-left: 45px;}
+  #article{padding-left: 40px;}
+  </style>
+
 </head>
 <body>
-<style>
-a{text-decoration:none; color:black}
-h1{font-size:45px; text-align:center;}
-</style>
-<h1><a href = "main.html">우리 나라</h1>
+<h1><a href = "main.html">우리 나라</a></h1>
+
+<div id="grid">
 <ol>
   <li><a href="1.html">대한민국</a></li>
   <li><a href="2.html">애국가</a></li>
   <li><a href="3.html">태극기</a></li>
   <li><a href="4.html"><a style="color:red">한반도</a></li>
 </ol>
+<div id="article">
+
 <h2>
   <a href="https://ko.dict.naver.com/#/entry/koko/5a695790ec6740f7b9ceb9e8ad1ba8c8"
   target="_blank"
-  title="한반도 정의">
-  <a style="text-decoration:underline">한반도</a></h2>
+  title="한반도 정의"
+  style="text-decoration:underline">한반도</a></h2>
+
 <h3>(1) 지형</h3>
 <p>한반도는 우리나라 국토를 지형적으로 일컫는 말이에요.
   우리나라의 영토는 한반도와 그 부속 도서를 포함해요.
   우리나라 영토 남북의 길이는 약 1,000km, 동서 폭은 약 300km 정도 되고 면적은 약 22만 제곱킬로미터예요.</p>
+
 <h3>(2) 지리적 이점</h3>
 <p>한반도는 대륙과 대양이 만나는 지점에 위치하고 있기 때문에 지리적인 이점이 커요.
   대륙과 해양을 잇는 위치에서 문화를 전파할 수 있는 통로가 될 수 있어요.
   원료를 수입하여 완제품을 만들어 파는 가공 무역이 발달하기에 적합하고, 대륙과 해양으로의 진출하기에 유리하지요.
   앞으로 한반도는 동북아시아의 물류 거점으로 발전할 잠재력이 크답니다.</p>
 <img src="한반도.jpg" width="500">
+</div>
+</div>
 </body>
 </html>
