--- a/main.html
+++ b/main.html
@@ -3,20 +3,32 @@
 <head>
   <title>WEB1 - 우리 나라</title>
   <meta charset="utf-8">
+
+  <style>
+  body{margin:0;}
+  a{text-decoration:none; color:black}
+  h1{font-size:45px; text-align:center; border-bottom:1px solid gray; margin:0; padding:20px;}
+  ol{border-right:1px solid gray; width:100px; margin:0; padding:20px;}
+  #grid{display: grid; grid-template-columns: 150px 1fr;}
+  #grid ol{padding-left: 45px;}
+  #article{padding-left: 40px;}
+  </style>
+
 </head>
 <body>
-<style>
-a{text-decoration:none; color:black}
-h1{font-size:45px; text-align:center;}
-</style>
-<h1><a href = "main.html"><a style="color:red">우리 나라</font></h1>
-<ol>
-  <li><a href="1.html">대한민국</font></a></li>
-  <li><a href="2.html">애국가</font></a></li>
-  <li><a href="3.html">태극기</font></a></li>
-  <li><a href="4.html">한반도</font></a></li>
-</ol>
-<p>이곳은 한국 소개하는 자그마한 사이트입니다.</p>
-<p>위의 목차로 함께 알아보아요!</p>
+<h1><a href = "main.html"><a style="color:red">우리 나라</a></a></h1>
+
+<div id="grid">
+ <ol>
+   <li><a href="1.html">대한민국</a></li>
+   <li><a href="2.html">애국가</a></li>
+   <li><a href="3.html">태극기</a></li>
+   <li><a href="4.html">한반도</a></li>
+ </ol>
+ <div id="article">
+   <p>이곳은 한국 소개하는 자그마한 사이트입니다.</p>
+   <p>위의 목차로 함께 알아보아요!</p>
+ </div>
+</div>
 </body>
 </html>
