--- a/main.html
+++ b/main.html
@@ -27,7 +27,7 @@
  </ol>
  <div id="article">
    <p>이곳은 한국 소개하는 자그마한 사이트입니다.</p>
-   <p>위의 목차로 함께 알아보아요!</p>
+   <p>옆의 목차로 함께 알아보아요!</p>
  </div>
 </div>
 </body>
